--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,9 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.1",
     "redux-devtools-extension": "^2.13.9"
   }
 }
